<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CorreosActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_gmail_logo"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/img_logo_gmail"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/gmail_logo" />

            <TextView
                android:id="@+id/tv_sin_internet_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/tv_sin_internet_correo"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/img_sin_internet"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/img_sin_internet"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/sin_internet" />

            <TextView
                android:id="@+id/tv_correo_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="15dp"
                android:text="@string/tv_correo_users"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/et_email_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:text="@string/tv_email_user"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_asunto_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="15dp"
                android:text="@string/tv_asunto_users"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_asunto_users"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/tv_pre_asunto_users"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_cuerpo_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="15dp"
                android:text="@string/tv_cuerpo_users"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_cuerpo_users"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:text="@string/tv_pre_cuerpo_users"
                android:textColor="@color/black" />

            <ProgressBar
                android:id="@+id/pb_correos"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_enviar_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/secundario"
                android:text="@string/btn_enviar_correo"
                android:textColor="@color/white" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>