<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PerfilFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="#C0CCDA"
                android:orientation="vertical">
            </LinearLayout>

            <ImageView
                android:id="@+id/imgPerfil"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="-65dp"
                android:contentDescription="@string/img_perfil"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/perfil_default" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:includeFontPadding="false"
                android:text="@string/tv_displayName_user"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="10dp"
                android:text="@string/tv_email_user"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnCerrarSesion"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="#DF6961"
                android:text="@string/btnCerrarSesion"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="17dp"
                android:layout_marginBottom="10dp"
                android:background="@color/secundario" />

            <TextView
                android:id="@+id/tvOtrosUsuarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/tvOtrosUsuarios"
                android:textColor="@color/black"
                android:textSize="26sp" />

            <Button
                android:id="@+id/btn_ver_contactos"
                android:layout_width="307dp"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/primario"
                android:text="@string/btn_ver_contactos"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>