<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    android:backgroundTint="@color/gris"
    android:elevation="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_perfil_users"
            android:layout_width="200dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/img_perfil"
            app:srcCompat="@drawable/perfil_default"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_displayName_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_displayName_user"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp" />

            <TextView
                android:id="@+id/tv_email_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_email_user"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="6dp" />

            <Button
                android:id="@+id/btn_contacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primario"
                android:text="@string/btn_contacto"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>